--- a/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
+++ b/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
@@ -2,7 +2,11 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Apply JavaScript example</title>
+    <title>Apply JavaScript example</title>  
+      <script src='script.js' defer>
+        
+      </script>
+
   </head>
   <body>
     <button>Click me</button>
